--- a/about/index.html
+++ b/about/index.html
@@ -7,15 +7,15 @@
     <!--[if IE]><meta http-equiv="x-ua-compatible" content="IE=9" /><![endif]-->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>About | Sribalainfra</title>
-    <meta
+    <!-- <meta
       name="description"
       content="Walls - Construction HTML Template. It is built using bootstrap 3.3.2 framework, works totally responsive, easy to customise, well commented codes and seo friendly."
-    />
+    /> -->
     <meta
       name="keywords"
       content="construction, industrial, development, manufacture, engineering, architecture, assembly, build, foundation, infrastructure"
     />
-    <meta name="author" content="rudhisasmito.com" />
+    <meta name="author" content="Prem Chand Dasari" />
 
     <!-- ==============================================
 	Favicons
@@ -94,7 +94,7 @@
             <div class="col-sm-5 col-md-6">
               <div class="topbar-left">
                 <div class="welcome-text">
-                  We help the world growing since 1983
+                  We help the world growing since 2025
                 </div>
               </div>
             </div>
@@ -291,10 +291,6 @@
         <div class="row">
           <div class="col-sm-12 col-md-12">
             <div class="title-page">About Us</div>
-            <ol class="breadcrumb">
-              <li><a href="index.html">Index</a></li>
-              <li class="active">Our Company</li>
-            </ol>
           </div>
         </div>
       </div>
@@ -305,7 +301,7 @@
       <div class="container">
         <div class="row">
           <div class="col-sm-6 col-md-6">
-            <img src="../images/600x400.jpg" alt="Infrastructure Project" />
+            <img src="https://res.cloudinary.com/doeugmx1i/image/upload/c_fill,w_600,h_400/v1751658909/portrait-engineers-job-site-work-hours_1_uutod9.jpg" alt="Infrastructure Project" />
             <div class="margin-bottom-30"></div>
           </div>
 
@@ -395,8 +391,8 @@
       </div>
     </div>
 
-    <!-- STATISTIC -->
-    <div class="section statistic bgsection">
+
+    <!-- <  
       <div class="container">
         <div class="row">
           <div class="col-sm-3 col-md-3">
@@ -428,7 +424,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <!-- WHY -->
     <div class="section why">
@@ -566,8 +562,8 @@
               <div class="icon"><i class="fa fa-phone"></i></div>
               <div class="body-content">
                 <div class="heading">CALL US NOW</div>
-                Office: +62 800 9000 123 <br />
-                Mobile: +62 800 9000 123
+                Office: +91 9959955675 <br />
+                Mobile: +91 9959955675
               </div>
             </div>
           </div>
@@ -587,8 +583,8 @@
               <div class="icon"><i class="fa fa-envelope"></i></div>
               <div class="body-content">
                 <div class="heading">SEND US A MESSAGE</div>
-                General: info@walls.com<br />
-                Sales: sales@walls.com
+                General: info@ushnik.in<br />
+                Sales: contact@sribalainfra.com
               </div>
             </div>
           </div>
