--- a/index.html
+++ b/index.html
@@ -94,11 +94,11 @@
             <div class="col-sm-5 col-md-6">
               <div class="topbar-left">
                 <div class="welcome-text">
-                  We help the world growing since 1983
+                  We help the world growing since 2025
                 </div>
               </div>
             </div>
-            <div class="col-sm-7 col-md-6">
+            <!-- <div class="col-sm-7 col-md-6">
               <div class="topbar-right">
                 <ul class="topbar-menu">
                   <li><a href="career.html" title="Career">Career</a></li>
@@ -126,7 +126,7 @@
                   </li>
                 </ul>
               </div>
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
@@ -266,7 +266,7 @@
     <div id="slides" class="section banner">
       <ul class="slides-container">
         <li>
-          <img src="images/1920x1300.jpg" alt="" />
+          <img src="https://res.cloudinary.com/doeugmx1i/image/upload/v1751654497/WhatsApp_Image_2025-06-29_at_18.08.14_a967ea63_j8ncdt.jpg" alt="" />
           <div class="overlay-bg"></div>
           <div class="container">
             <div class="wrap-caption">
@@ -285,7 +285,7 @@
           </div>
         </li>
         <li>
-          <img src="images/1920x1300.jpg" alt="" />
+          <img src="https://res.cloudinary.com/doeugmx1i/image/upload/v1751656528/WhatsApp_Image_2025-07-05_at_00.06.45_fced3bed_gbxful.jpg" alt="" />
           <div class="overlay-bg"></div>
           <div class="container">
             <div class="wrap-caption right">
@@ -306,7 +306,7 @@
           </div>
         </li>
         <li>
-          <img src="images/1920x1300.jpg" alt="" />
+          <img src="https://res.cloudinary.com/doeugmx1i/image/upload/v1751657308/beautiful-view-construction-site-city-sunset_1_xkilb7.jpg" alt="" />
           <div class="overlay-bg"></div>
           <div class="container">
             <div class="wrap-caption center">
@@ -351,20 +351,20 @@
                 <div class="feature-box-8">
                   <div class="media">
                     <img
-                      src="images/600x350.jpg"
+                      src="https://res.cloudinary.com/doeugmx1i/image/upload/c_fill,w_600,h_350,g_auto/v1751654708/WhatsApp_Image_2025-06-29_at_18.08.14_a967ea63_vrwxzh.jpg"
                       alt="Infrastructure Planning"
                       class="img-responsive"
                     />
                   </div>
                   <div class="body">
-                    <a href="services-detail.html" class="title"
+                    <a href="#" class="title"
                       >Infrastructure Planning</a
                     >
                     <p>
                       Strategic development and planning for high-performance
                       infrastructure projects.
                     </p>
-                    <a href="services-detail.html" class="readmore"
+                    <a href="#" class="readmore"
                       >READ MORE</a
                     >
                   </div>
@@ -376,20 +376,20 @@
                 <div class="feature-box-8">
                   <div class="media">
                     <img
-                      src="images/600x350.jpg"
+                      src="https://res.cloudinary.com/doeugmx1i/image/upload/c_fill,w_600,h_350/v1751654832/hands-engineer-working-blueprint-construction-concept-engineering-tools-vintage-tone-retro-filter-effect-soft-focus-selective-focus_y5f5o1.jpg"
                       alt="Construction Management"
                       class="img-responsive"
                     />
                   </div>
                   <div class="body">
-                    <a href="services-detail.html" class="title"
+                    <a href="#" class="title"
                       >Construction Management</a
                     >
                     <p>
                       End-to-end execution and management of infrastructure
                       development operations.
                     </p>
-                    <a href="services-detail.html" class="readmore"
+                    <a href="#" class="readmore"
                       >READ MORE</a
                     >
                   </div>
@@ -401,20 +401,20 @@
                 <div class="feature-box-8">
                   <div class="media">
                     <img
-                      src="images/600x350.jpg"
+                      src="https://res.cloudinary.com/doeugmx1i/image/upload/c_fill,w_600,h_350/v1751654981/businessmen-hands-white-table-with-documents-drafts_1_pfgsfa.jpg"
                       alt="Engineering Excellence"
                       class="img-responsive"
                     />
                   </div>
                   <div class="body">
-                    <a href="services-detail.html" class="title"
+                    <a href="#" class="title"
                       >Engineering Excellence</a
                     >
                     <p>
                       Delivering reliable engineering solutions with a focus on
                       quality and teamwork.
                     </p>
-                    <a href="services-detail.html" class="readmore"
+                    <a href="#" class="readmore"
                       >READ MORE</a
                     >
                   </div>
@@ -449,7 +449,7 @@
               <div class="about-img-top">
                 <div class="hover-img">
                   <img
-                    src="images/600x400.jpg"
+                    src="https://res.cloudinary.com/doeugmx1i/image/upload/c_fill,w_600,h_400/v1751657681/view-luxurious-villa-with-modern-architectural-design_1_1_2_rddswo.jpg"
                     alt="Infrastructure Development"
                     class="img-responsive"
                   />
@@ -458,7 +458,7 @@
               <div class="about-img-bottom">
                 <div class="hover-img">
                   <img
-                    src="images/600x400.jpg"
+                    src="https://res.cloudinary.com/doeugmx1i/image/upload/c_fill,w_600,h_400/v1751658421/indian-city-buildings-scene_1_1_1_1_mq1qhv.jpg"
                     alt="Engineering Services"
                     class="img-responsive"
                   />
@@ -1002,8 +1002,8 @@
               <div class="icon"><i class="fa fa-phone"></i></div>
               <div class="body-content">
                 <div class="heading">CALL US NOW</div>
-                Office: +62 800 9000 123 <br />
-                Mobile: +62 800 9000 123
+                Office: +91 9959955675 <br />
+                Mobile: +91 9959955675
               </div>
             </div>
           </div>
@@ -1023,8 +1023,8 @@
               <div class="icon"><i class="fa fa-envelope"></i></div>
               <div class="body-content">
                 <div class="heading">SEND US A MESSAGE</div>
-                General: info@walls.com<br />
-                Sales: sales@walls.com
+                General: info@ushnik.in<br />
+                Sales: contact@sribalainfra.com
               </div>
             </div>
           </div>
