--- a/news-detail.html
+++ b/news-detail.html
@@ -56,7 +56,7 @@
 					<div class="col-sm-5 col-md-6">
 						<div class="topbar-left">
 							<div class="welcome-text">
-							We help the world growing since 1983
+							We help the world growing since 2025
 							</div>
 						</div>
 					</div>
@@ -387,8 +387,8 @@
 						<div class="icon"><i class="fa fa-phone"></i></div>
 						<div class="body-content">
 							<div class="heading">CALL US NOW</div>
-							Office: +62 800 9000 123 <br>
-							Mobile: +62 800 9000 123
+							Office: +91 9959955675 <br>
+							Mobile: +91 9959955675
 						</div>
 					</div>
 				</div>
@@ -408,8 +408,8 @@
 						<div class="icon"><i class="fa fa-envelope"></i></div>
 						<div class="body-content">
 							<div class="heading">SEND US A MESSAGE</div>
-							General: info@walls.com<br>
-							Sales: sales@walls.com
+							General: info@ushnik.in<br>
+							Sales: contact@sribalainfra.com
 						</div>
 					</div>
 				</div>
