--- a/about-history.html
+++ b/about-history.html
@@ -56,7 +56,7 @@
 					<div class="col-sm-5 col-md-6">
 						<div class="topbar-left">
 							<div class="welcome-text">
-							We help the world growing since 1983
+							We help the world growing since 2025
 							</div>
 						</div>
 					</div>
@@ -236,7 +236,7 @@
 		                <div class="media"><img src="images/600x400.jpg" class="img-responsive" alt="Company History"></div>
 		                <div class="aksen"></div>
 		                <div class="text">
-		                  <div class="year">1983</div>
+		                  <div class="year">2025</div>
 		                  <div class="title">Smells Racy Free Announcing</div>
 		                  <p>This was the time when we started our company. We had no idea how far we would go, we werenâ€™t even sure that we would be able to survive for a few years. What drove us to start the company was the understanding that we could provide a service no one else was providing.</p>
 		                </div>
@@ -286,8 +286,8 @@
 						<div class="icon"><i class="fa fa-phone"></i></div>
 						<div class="body-content">
 							<div class="heading">CALL US NOW</div>
-							Office: +62 800 9000 123 <br>
-							Mobile: +62 800 9000 123
+							Office: +91 9959955675 <br>
+							Mobile: +91 9959955675
 						</div>
 					</div>
 				</div>
@@ -307,8 +307,8 @@
 						<div class="icon"><i class="fa fa-envelope"></i></div>
 						<div class="body-content">
 							<div class="heading">SEND US A MESSAGE</div>
-							General: info@walls.com<br>
-							Sales: sales@walls.com
+							General: info@ushnik.in<br>
+							Sales: contact@sribalainfra.com
 						</div>
 					</div>
 				</div>
