--- a/about/index.html
+++ b/about/index.html
@@ -477,7 +477,7 @@
                 </a>
               </div>
               <img
-                src="../images/600x400.jpg"
+                src="https://res.cloudinary.com/doeugmx1i/image/upload/c_fill,w_600,h_400/v1751659925/young-colleagues-working-together-cafe_1_1_ame6zk.jpg"
                 alt="Company Culture Video"
                 class="img-responsive"
               />
@@ -494,7 +494,7 @@
 
       <!-- Image Section -->
       <div class="col-sm-6 col-md-6">
-        <img src="../images/600x400.jpg" alt="Why Choose Our Infrastructure Company" />
+        <img src="https://res.cloudinary.com/doeugmx1i/image/upload/c_fill,w_600,h_400/v1751659730/business-man-holding-clipboard-with-why-choose-us-question_1_1_deoz51.jpg" alt="Why Choose Our Infrastructure Company" />
         <div class="margin-bottom-30"></div>
       </div>
 
@@ -573,7 +573,7 @@
               <div class="icon"><i class="fa fa-map-marker"></i></div>
               <div class="body-content">
                 <div class="heading">COME VISIT US</div>
-                99 S.t Jomblo Park Pekanbaru 28292. Indonesia
+                RSS1~ ragasprings kahrthabad hyd 500004
               </div>
             </div>
           </div>
