--- a/contact/index.html
+++ b/contact/index.html
@@ -325,18 +325,18 @@
 								<div class="info-icon">
 									<span class="fa fa-map-marker"></span>
 								</div>
-								<div class="info-text">99 S.t Jomblo Park Pekanbaru 28292. Indonesia</div> </li>
+								<div class="info-text">RSS1~ ragasprings kahrthabad hyd 500004</div> </li>
 							<li>
 								<div class="info-icon">
 									<span class="fa fa-phone"></span>
 								</div>
-								<div class="info-text">(0761) 654-123987</div>
+								<div class="info-text">+91 9959955675</div>
 							</li>
 							<li>
 								<div class="info-icon">
 									<span class="fa fa-envelope"></span>
 								</div>
-								<div class="info-text">info@yoursite.com</div>
+								<div class="info-text">contact@sribalainfra.com</div>
 							</li>
 							<li>
 								<div class="info-icon">
@@ -411,7 +411,7 @@
 						<div class="icon"><i class="fa fa-map-marker"></i></div>
 						<div class="body-content">
 							<div class="heading">COME VISIT US</div>
-							99 S.t Jomblo Park Pekanbaru 28292. Indonesia
+							RSS1~ ragasprings kahrthabad hyd 500004
 						</div>
 					</div>
 				</div>
