--- a/services.html
+++ b/services.html
@@ -303,7 +303,7 @@
 						<div class="icon"><i class="fa fa-map-marker"></i></div>
 						<div class="body-content">
 							<div class="heading">COME VISIT US</div>
-							99 S.t Jomblo Park Pekanbaru 28292. Indonesia
+							RSS1~ ragasprings kahrthabad hyd 500004
 						</div>
 					</div>
 				</div>
