--- a/404page.html
+++ b/404page.html
@@ -242,7 +242,7 @@
 						<div class="icon"><i class="fa fa-map-marker"></i></div>
 						<div class="body-content">
 							<div class="heading">COME VISIT US</div>
-							99 S.t Jomblo Park Pekanbaru 28292. Indonesia
+							RSS1~ ragasprings kahrthabad hyd 500004
 						</div>
 					</div>
 				</div>
@@ -272,7 +272,7 @@
 				<div class="col-sm-3 col-md-3">
 					<div class="footer-item">
 						<img src="images/logo.png" alt="logo bottom" class="logo-bottom">
-						<p>This template is a micro niche for business categories, namely Walls - Construction HTML Template. there was an excess of this template is using HTML/CSS.</p>
+						<p>We specialize exclusively in infrastructure services, delivering reliable and scalable solutions in road construction, bridge engineering, utility development, and urban infrastructure. Our commitment lies in building the backbone of smart, sustainable, and future-ready communities.</p>
 						<div class="footer-sosmed">
 							<a href="#" title="">
 								<div class="item">
