--- a/index.html
+++ b/index.html
@@ -1044,9 +1044,7 @@
                 class="logo-bottom"
               />
               <p>
-                This template is a micro niche for business categories, namely
-                Walls - Construction HTML Template. there was an excess of this
-                template is using HTML/CSS.
+                We specialize exclusively in infrastructure services, delivering reliable and scalable solutions in road construction, bridge engineering, utility development, and urban infrastructure. Our commitment lies in building the backbone of smart, sustainable, and future-ready communities.
               </p>
               <div class="footer-sosmed">
                 <a href="#" title="">
