--- a/services.html
+++ b/services.html
@@ -333,7 +333,7 @@
 				<div class="col-sm-3 col-md-3">
 					<div class="footer-item">
 						<img src="images/logo-light.png" alt="logo bottom" class="logo-bottom">
-						<p>This template is a micro niche for business categories, namely Petro - Industrial HTML Template. there was an excess of this template is using HTML/CSS.</p>
+						<p>We specialize exclusively in infrastructure services, delivering reliable and scalable solutions in road construction, bridge engineering, utility development, and urban infrastructure. Our commitment lies in building the backbone of smart, sustainable, and future-ready communities.</p>
 						<div class="footer-sosmed">
 							<a href="#" title="">
 								<div class="item">
