--- a/index.html
+++ b/index.html
@@ -842,7 +842,7 @@
               <div class="item">
   <div class="testimonial-1">
     <div class="media">
-      <img src="images/600x600.jpg" alt="Paul Juwaal" class="img-responsive" />
+      <img src="https://res.cloudinary.com/doeugmx1i/image/upload/c_fill,w_600,h_600/v1751778256/Avatars_vggGlyph_Style_jsapag.jpg" alt="Paul Juwaal" class="img-responsive" />
     </div>
     <div class="body">
       <div class="title">Paul Juwaal</div>
@@ -857,7 +857,7 @@
 <div class="item">
   <div class="testimonial-1">
     <div class="media">
-      <img src="images/600x600.jpg" alt="Debora Deandra" class="img-responsive" />
+      <img src="https://res.cloudinary.com/doeugmx1i/image/upload/c_fill,w_600,h_600/v1751778256/Avatars_Circles_cfgGlyph_Style_lafcbm.jpg" alt="Debora Deandra" class="img-responsive" />
     </div>
     <div class="body">
       <div class="title">Debora Deandra</div>
@@ -872,7 +872,7 @@
 <div class="item">
   <div class="testimonial-1">
     <div class="media">
-      <img src="images/600x600.jpg" alt="Steve Nuer" class="img-responsive" />
+      <img src="https://res.cloudinary.com/doeugmx1i/image/upload/c_fill,w_600,h_600/v1751778256/Avatars_Circles_Glyph_ggStyle_es34dw.jpg" alt="Steve Nuer" class="img-responsive" />
     </div>
     <div class="body">
       <div class="title">Steve Nuer</div>
@@ -887,7 +887,7 @@
 <div class="item">
   <div class="testimonial-1">
     <div class="media">
-      <img src="images/600x600.jpg" alt="Robert Lav" class="img-responsive" />
+      <img src="https://res.cloudinary.com/doeugmx1i/image/upload/c_fill,w_600,h_600/v1751778256/Avatars_Circles_Glyph_Style_qbxcp7.jpg" alt="Robert Lav" class="img-responsive" />
     </div>
     <div class="body">
       <div class="title">Robert Lav</div>
