--- a/index.html
+++ b/index.html
@@ -828,7 +828,7 @@
     </div> -->
 
     <!-- TESTIMONIALS -->
-    <div class="section testimony">
+    <!-- <div class="section testimony">
       <div class="container">
         <div class="row">
           <div class="col-sm-12 col-md-12">
@@ -903,7 +903,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <!-- CTA -->
     <div class="section cta">
@@ -927,7 +927,7 @@
 
 
     <!-- PARTNER -->
-    <div class="section stat-client">
+    <!-- <div class="section stat-client">
       <div class="container">
         <div class="row">
           <div class="col-sm-2 col-md-2">
@@ -990,8 +990,8 @@
           </div>
         </div>
       </div>
-    </div>
-
+    </div> -->
+<br>
     <!-- INFO BOX -->
     <div class="section info overlap-bottom">
       <div class="container">
